--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-01-11 20:25:43 +0000 
+%% Created for Adinda de Wit at 2017-01-12 14:19:41 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{CMS-PAS-HIG-16-037-addit,
+	Collaboration = {CMS},
+	Date-Added = {2017-01-12 14:16:55 +0000},
+	Date-Modified = {2017-01-12 14:19:32 +0000},
+	Howpublished = {\url{http://cms-results.web.cern.ch/cms-results/public-results/preliminary-results/HIG-16-037/index.html}},
+	Keywords = {13TeV},
+	Title = {Search for a neutral MSSM Higgs boson decaying into $\tau\tau$ with 12.9 fb$^-1$ of data at $s = 13$ TeV (Additional material)},
+	Year = {2016}}
 
 @article{YR4,
 	Collaboration = {The LHC Higgs Cross Section Working Group},
@@ -28,7 +37,8 @@
 	Pages = {653-680},
 	Title = {Uncertainties on alpha(S) in global PDF analyses and implications for predicted hadronic cross sections},
 	Volume = {64},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-009-1164-2}}
 
 @article{pdf-lhc,
 	Author = {A.D. Martin and W.J. Stirling and G. Watt},
@@ -41,7 +51,8 @@
 	Pages = {1890285},
 	Title = {Parton distributions for the LHC},
 	Volume = {63},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-009-1072-5}}
 
 @article{CMS-PAS-HIG-16-007,
 	Collaboration = {CMS},
