Fixing tables in MSSM section

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -800,7 +800,7 @@ particles, are defined by $\alpha$ and $\beta$, as in table \ref{tab:hhh_2HDM_co
 \begin{center}
 \caption{Couplings in the type II 2HDM}
 \begin{tabular}{@{}ll@{}}
-%\toprule
+\toprule
 \textbf{Decay} & \textbf{Coupling}\\
 \midrule
 $\PHiggslight \rightarrow$ up--type quarks & $\text{SM coupling} \times \frac{\cos{\alpha}}{\sin{\beta}}$ \\
@@ -808,7 +808,7 @@ $\PHiggslight \rightarrow$ down--type quarks, leptons & $\text{SM coupling} \tim
 $\PHiggs \rightarrow \PHiggslight\PHiggslight$ & $\sim$ \cosba $\times$ terms containing masses,\\
  & mixing angles, quartic couplings \\
 $\PHiggsps \rightarrow \PZ\PHiggslight$ & $\sim$ \cosba\\
-%\bottomrule
+\bottomrule
 \end{tabular}
 \label{tab:hhh_2HDM_couplings}
 \end{center}
