--- a/MSSM/UncOv.tex
+++ b/MSSM/UncOv.tex
@@ -1,86 +1,73 @@
-\section{Overview of uncertainties}
-\label{sec:mssm_uncs_overview}
-The systematics that are applied are summarised in
-table \ref{tab:SystematicUncertainties_mt} for the $\mu\tau_h$
-channel, in table \ref{tab:SystematicUncertainties_et} for the $e\tau_h$ channel,
-in table \ref{tab:SystematicUncertainties_tt} for the $\tau_h\tau_h$ channel and
-in table \ref{tab:SystematicUncertainties_em} for the $e\mu$ channel. Additionally,
-the systematic uncertainties for the $Z\rightarrow\mumu$ control region are shown
-in table \ref{tab:SystematicUncertainties_zmm}.
-
 \begin{table}[!h]
 \begin{center}
 \caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
-or background events in the $\mu \tau_{h}$ channel. Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
- {\scriptsize
+or background events in the $\mu \tau_{h}$ channel.} 
+ {\tiny
  \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
+\toprule
      & \multicolumn{8}{|c}{Event yield uncertainty by event category} &  \\
-    \hline
+    \midrule
 \textbf{ Process }
     & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
      & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
     All from MC    & 6.2\%  &6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
     All from MC & 0--1\% & 0--2\% & 0--1\% & 0--1\%& 0--12\% & 3--11\% & 0--15\% & 0--14\% & Fully correlated \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\MET \textbf{scale} }\\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ, VVT,VVJ                         \\
     TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\MET \textbf{resolution}} \\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ,VVT,VVJ                         \\
     TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Muon identification and trigger} }\\
     All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton identification}}\\
     ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
-    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Corr. between cats, uncorr. between chns    \\
-    \hline
+    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Cats:C,chns:U    \\
+    \midrule
     \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
     All from MC & 0--3\% & 0--3\% & 0--3\% & 0--2\% & 1--3\% &  0--3\%& 0--3\% & 0--3\%& Fully correlated\\
     W &  &  &  &  & 4\% & 4\% & 6\% & 6\%& Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
     All from MC & & & & & 1--7\% & & & & Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
-    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
+    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
+    \midrule
     \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
-    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
+    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
+    \midrule
     \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
     TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{DY reweighting } }\\
     ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
     W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
     ZL,ZJ       & 4\% & 4\% & 4\% & 4\% & 4\%  & 4\% & 4\% & 4\% & Fully correlated              \\
     ZTT         &  & 4\% & 4\% & 4\% &  & 4\% & 4\% & 4\% & Fully correlated              \\
    \multicolumn{10}{l}{ $Z\to\Pgt\Pgt$\textbf{: $Z\to\Pgt\Pgt / Z\to\Pgm\Pgm$ extrapolation } } \\
     ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\cPqt\cPaqt$}\\
+    \multicolumn{10}{l}{\textbf{Normalisation,} \ttbar}\\
     TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
     \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
     VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
    \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pgm\Pgm$: $\Pgm$ \textbf{misidentified as} $\tau_{h}$ }\\
-    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% &Corr. between cats, uncorr. between chns        \\
+    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% &Cats:C,chns:U        \\
     \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
-    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Corr. between cats, uncorr. between chns  \\
-    \hline
+    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Cats:C,chns:U  \\
+    \midrule
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
     W & 2\% & 2\% & & &11\% &11\% & & & Fully uncorrelated \\
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (syst) } }\\
@@ -95,7 +82,7 @@ uncorrelated between the different decay channels and event categories.}
     %W &  & & & & 10\% & & 10\% & & Fully uncorrelated \\
     \multicolumn{10}{l}{\textbf{QCD OS/SS ratio (syst) }}\\
     QCD & 4\% & 4\% & & & 60\% & 60\% & & &Fully uncorrelated \\
-    \hline
+\bottomrule
 \end{tabular}
 }
 \label{tab:SystematicUncertainties_mt}
@@ -106,76 +93,73 @@ uncorrelated between the different decay channels and event categories.}
 \begin{table}[!h]
 \begin{center}
 \caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
-or background events in the $e \tau_{h}$ channel. Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
- {\scriptsize
+or background events in the \etau channel.}
+ {\tiny
  \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
+\toprule
      & \multicolumn{8}{|c}{Event yield uncertainty by event category} &  \\
-    \hline
+    \midrule
 \textbf{ Process }
     & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
      & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
     All from MC    & 6.2\%  & 6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
     All from MC & 0--1\% & 0--1\% & 0--2\% & 0--1\%& 1--14\% & 0--12\% & 0--15\% & 0--15\% & Fully correlated \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\MET \textbf{scale}}\\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ                         \\
     TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\MET \textbf{resolution}} \\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ          \\
     TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Electron identification and trigger} }\\
     All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton identification}}\\
     ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
-    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Corr. between cats, uncorr. between chns    \\
-    \hline
+    ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Cats:C,chns:U    \\
+    \midrule
     \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
     All from MC & 0--3\% & 0--3\% & 0--4\% & 0--4\% & 1--4\% & 0--2\% & 0--2\% & 0--2\% & Fully correlated\\
     W &  &  &  &  & 5\% & 2\% & 10\% & 3\% & Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
     All from MC & & & & & 0--3\% & & & & Fully correlated\\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
-    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
+    ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
+    \midrule
     \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
-    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Corr. between cats, uncorr. between chns   \\
-    \hline
+    ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
+    \midrule
     \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
     TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{DY reweighting } }\\
     ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
     W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
-    \hline
+    \midrule
     \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
     ZL,ZJ       & 4\% & 4\% & 4\% & 4\% & 4\%  & 4\% & 4\% & 4\% & Fully correlated              \\
     ZTT         &  & 4\% & 4\% & 4\% &  & 4\% & 4\% & 4\% & Fully correlated              \\
    \multicolumn{10}{l}{ $Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{ extrapolation} } \\
     ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\cPqt\cPaqt$}\\
+    \multicolumn{10}{l}{\textbf{Normalisation,} \ttbar}\\
     TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
     \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
     VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
    \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pe\Pe$: $\Pe$ \textbf{misidentified as} $\tau_{h}$ }\\
-    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% & Corr. between cats, uncorr. between chns       \\
+    ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% & Cats:C,chns:U       \\
     \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
-    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Corr. between cats, uncorr. between chns       \\
-    \hline
+    ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Cats:C,chns:U       \\
+    \midrule
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
     W & 2\% & 2\% & & &14\% &14\% & & & Fully uncorrelated \\
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (syst) } }\\
@@ -190,7 +174,7 @@ uncorrelated between the different decay channels and event categories.}
     %W &  & & & & 10\% & & 10\% & & Fully uncorrelated \\
     \multicolumn{10}{l}{\textbf{QCD OS/SS ratio (syst) }}\\
     QCD & 12\% & 12\% & & & 60\% & 60\% & & &Fully uncorrelated \\
-    \hline
+    \bottomrule
 \end{tabular}
 }
 \label{tab:SystematicUncertainties_et}
@@ -201,78 +185,76 @@ uncorrelated between the different decay channels and event categories.}
 \begin{table}[!h]
 \begin{center}
 \caption{Systematic uncertainties that affect the estimated number of signal
-or background events in the $\tau_{h} \tau_{h}$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
+or background events in the \tautau channel.}
 {\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
+\begin{tabular}{l|cc|p{5cm}}
+\toprule
      & \multicolumn{2}{|c}{Event yield uncertainty by event category} & \\
-    \hline
+    \midrule
     Process & No b-tag & B-tag & Correlation                   \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
     All from MC      & 6.2\%      & 6.2\%  & Fully correlated                           \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}} \\
     All from MC      & 0--4\%      & 0--9\%  & Fully correlated                    \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\MET \textbf{scale}} \\
     ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\MET \textbf{resolution}} \\
     ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{Tau-lepton identification and trigger} \\
     ZTT,TTT,VVT, signal         & 10\%    & 10\%  & Fully correlated                      \\
     ZTT,TTT,VVT, signal         & 9.2\%     & 9.2\%   & Correlated between categories, uncorrelated between channels \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{B-tagging efficiency} }\\
     All from MC   & 0--4\%     & 0--11\%  & Fully correlated                  \\
-    \hline
+    \midrule
    \multicolumn{4}{l}{\textbf{B-mistag rate}} \\
     All from MC    &  0--1\%    & 0--12\%  & Fully correlated                  \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Tau-lepton energy scale}} \\
     ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels                       \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{High} $P_{T}$ $\tau_h$ \textbf{ID efficiency}} \\
     ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels   \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{DY reweighting } } \\
     ZTT       & shape      & shape & Fully correlated                       \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting } } \\
     TTT,TTJ & shape & shape & Fully correlated                  \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production}}\\
     ZL,ZJ       & 4\%      & 4\%  & Fully correlated                    \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{$Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{: extrapolation}}\\
     ZTT         & 3\%        & 5\%  & Fully uncorrelated                   \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
+    \midrule
+    \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TTT,TTJ        & 6\%       & 6\%  & Fully correlated                       \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, di-boson}}\\
     VVT,VVJ &  5\%        & 5\%       & Fully correlated                        \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ\to\Pe\Pe$: $\Pe$\textbf{ misidentified as }$\tau_{h}$}\\
     ZL & 10\%     & 10\%       & Correlated between categories, uncorrelated between channels                        \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$}\\
     ZJ,W,TTJ & 20\%     & 20\%       & Correlated bewteen categories, uncorrelated between channels     \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (stat) }} \\
     QCD  & 2\% & 20\%  & Fully uncorrelated\\
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (syst) }} \\
     QCD  & 12\% & 14\%  & Fully uncorrelated\\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
     W & 4\% & 4\% & Fully correlated \\
+\bottomrule
 \end{tabular}}
 \label{tab:SystematicUncertainties_tt}
 \end{center}
@@ -282,70 +264,68 @@ uncorrelated between the different decay channels and event categories.}
 \begin{table}[!h]
 \begin{center}
 \caption{Systematic uncertainties that affect the estimated number of signal
-or background events in the $e\mu$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
+or background events in the \emu channel.}
 {\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
+\begin{tabular}{l|cc|p{5cm}}
+   \toprule
      & \multicolumn{2}{|c}{Event yield uncertainty by event category} &   \\
-    \hline
+    \midrule
     \textbf{Process}
     &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
     All from MC      & 6.2\%      & 6.2\% & Fully correlated                            \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
     All from MC   & 0--1\% & 1--69\% &Fully correlated \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\MET \textbf{scale}} \\
     ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
-    \hline
+    \midrule
    \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
     ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
     TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Electron identification and trigger}}\\
     All from MC       & 2\%        & 2\% & Fully correlated                              \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Muon identification and trigger}  }\\
     All from MC      & 2\%     & 2\%  & Fully correlated                      \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
     All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
     All from MC      &     & 0--10\% & Fully correlated                    \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Electron energy scale}} \\
     ZTT,signal      & shape      & shape  & Fully correlated                \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{DY reweighting }}\\
      ZTT       & shape      & shape & Fully correlated                       \\
-   \hline
+   \midrule
     \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting}}\\
     TT & shape & shape  & Fully correlated                 \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
     ZLL      & 4\%      & 4\%  & Fully correlated                   \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{$Z\to\Pgt\Pgt/Z\to\Pgm\Pgm$\textbf{: extrapolation} }\\
      ZTT        & 3\%        & 5\%   & Fully uncorrelated                      \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
+    \midrule
+    \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TT        & 6\%       & 6\% & Fully correlated                        \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
     VV        & 5\%       & 5\% & Fully correlated                       \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet }}\\
     QCD & 23\% & 34\% & Fully uncorrelated\\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
     W+jets & 4\% & 4\% & Fully correlated\\
+\bottomrule
 \end{tabular}}
 \label{tab:SystematicUncertainties_em}
 \end{center}
@@ -354,49 +334,47 @@ uncorrelated between the different decay channels and event categories.}
 \begin{table}[!h]
 \begin{center}
 \caption{Systematic uncertainties that affect the estimated number of
-or background events in the $Z\rightarrow\mu\mu$ channel.Some of the uncertainties
-are different for different processes, where this is the case ranges are given.
-Uncertainties marked "Fully correlated" are correlated between the different
-decay channels and event categories, those marked "Fully uncorrelated" are
-uncorrelated between the different decay channels and event categories.}
+or background events in the $Z\rightarrow\mu\mu$ channel.}
 {\scriptsize
-\begin{tabular}{l|cc|p{3cm}}
+\begin{tabular}{l|cc|p{5cm}}
+   \toprule
      & \multicolumn{2}{|c}{Event yield uncertainty by event category} &   \\
-    \hline
+    \midrule
     \textbf{Process}
     &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
     All from MC (not ZL)     & 6.2\%      & 6.2\% & Fully correlated                            \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
     All from MC   & 0--1\% & 1--69\% &Fully correlated \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\MET \textbf{scale}} \\
     ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
-    \hline
+    \midrule
    \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
     ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
     TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Muon identification and trigger}}\\
     All from MC       & 2--4\%        & 2--4\% & Fully correlated                              \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
     All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
     All from MC      &     & 0--10\% & Fully correlated                    \\
-    \hline
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\cPqt\cPaqt$}\\
+    \midrule
+    \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TT        & 6\%       & 6\% & Fully correlated                        \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
     VV        & 5\%       & 5\% & Fully correlated                       \\
-    \hline
+    \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
     W+jets & 4\% & 4\% & Fully correlated\\
+    \bottomrule
 \end{tabular}}
 \label{tab:SystematicUncertainties_zmm}
 \end{center}
